--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: LevelUp
+lang: en
+timezone: America/Los_Angeles
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  This is a blog and/or wiki for Central App Dev to share knowledge with each other.
+baseurl: /levelup # the subpath of your site, e.g. /blog
+url: https://jackiejohnston.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:title
 
-# Build settings
-markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
+  - README.md
