--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,33 @@ lang: en
 timezone: America/Los_Angeles
 description: > # this means to ignore newlines until "baseurl:"
   This is a blog and/or wiki for Central App Dev to share knowledge with each other.
+url: https://jackiejohnston.github.io # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: /levelup # the subpath of your site, e.g. /blog
-url: https://jackiejohnston.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:title
 
 gems:
+  - jekyll-autoprefixer
   - jekyll-feed
+
+safe: false
+
+sass:
+  style: compressed
+
+# Set Jekyll's env to enable/disable Uglifier    
+env: 'production'  
+
+
 exclude:
   - Gemfile
   - Gemfile.lock
   - README.md
+
+stitch:
+  dependencies: 
+    - 'assets/javascripts/site.js'
+  output: 'assets/javascripts/application.min.js'
+  fingerprint: false
+  cleanup: true
+  uglify: true
+  uglify_options: {}
